; ModuleID = '/home/carl/AnghaBench/linux/drivers/clk/x86/extr_clk-pmc-atom.c_plt_clk_remove.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clk/x86/extr_clk-pmc-atom.c_plt_clk_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.platform_device = type { i32 }
%struct.clk_plt_data = type { i32, i32 }

@PMC_CLK_NUM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.platform_device*)* @plt_clk_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @plt_clk_remove(%struct.platform_device* %0) #0 {
  %2 = alloca %struct.platform_device*, align 8
  %3 = alloca %struct.clk_plt_data*, align 8
  store %struct.platform_device* %0, %struct.platform_device** %2, align 8
  %4 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %5 = call %struct.clk_plt_data* @platform_get_drvdata(%struct.platform_device* %4)
  store %struct.clk_plt_data* %5, %struct.clk_plt_data** %3, align 8
  %6 = load %struct.clk_plt_data*, %struct.clk_plt_data** %3, align 8
  %7 = getelementptr inbounds %struct.clk_plt_data, %struct.clk_plt_data* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @clkdev_drop(i32 %8)
  %10 = load %struct.clk_plt_data*, %struct.clk_plt_data** %3, align 8
  %11 = getelementptr inbounds %struct.clk_plt_data, %struct.clk_plt_data* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @clkdev_drop(i32 %12)
  %14 = load %struct.clk_plt_data*, %struct.clk_plt_data** %3, align 8
  %15 = load i32, i32* @PMC_CLK_NUM, align 4
  %16 = call i32 @plt_clk_unregister_loop(%struct.clk_plt_data* %14, i32 %15)
  %17 = load %struct.clk_plt_data*, %struct.clk_plt_data** %3, align 8
  %18 = call i32 @plt_clk_unregister_parents(%struct.clk_plt_data* %17)
  ret i32 0
}

declare dso_local %struct.clk_plt_data* @platform_get_drvdata(%struct.platform_device*) #1

declare dso_local i32 @clkdev_drop(i32) #1

declare dso_local i32 @plt_clk_unregister_loop(%struct.clk_plt_data*, i32) #1

declare dso_local i32 @plt_clk_unregister_parents(%struct.clk_plt_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
